Fix modal form bug and change dark mode color

--- a/assignment-2/src/styles/App.module.css
+++ b/assignment-2/src/styles/App.module.css
@@ -7,7 +7,7 @@
 }
 
 .dark {
-    --background: #0f0808;
+    --background: #030303;
     --hightlight: #ccc;
 
     color: var(--hightlight);
